--- a/assets/style.css
+++ b/assets/style.css
@@ -37,13 +37,13 @@ body {
 
 /* ACTOR HERO */
 .actor-panel {
-  background: linear-gradient(rgba(36,52,71,0.6), rgba(36,52,71,0.6)), url('/assets/images/headshot1.jpg') center/cover no-repeat;
+  background: linear-gradient(rgba(36,52,71,0.6), rgba(36,52,71,0.6)), url('/assets/images/.jpg') center/cover no-repeat;
   color: white;
 }
 
 /* MAGICIAN HERO */
 .magician-panel {
-  background: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.6)), url('/assets/images/magician-home.jpg') center/cover no-repeat;
+  background: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.6)), url('/assets/images/.jpg') center/cover no-repeat;
   color: var(--dark);
 }
 
