--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,8 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 16px 60px;
+  height: 70px; /* stała wysokość */
+  padding: 0 60px; /* usuwamy pionowy padding */
   display: flex;
   justify-content: space-between;
   align-items: center;
